# NIIET

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  requirements-dev.txt
AppMain/: AppMain.c  CMakeLists.txt
AppMain/sys/: syscalls.c  sysmem.c
Chip/: CMakeLists.txt
Chip/K1921VG015/: CMakeLists.txt  k1921vg015_flash.ld  startup_k1921vg015.S
Chip/K1921VG015/custom/src/: plib015_flash.c  riscv-irq.c
Cmake/opts/: custom_build_opts.cmake
Cmake/toolchain/: toolchain.cmake
Cmake/utils/: change_log.cmake  pre-commit.cmake
Lib/: CMakeLists.txt
Lib/freeRTOS/: CMakeLists.txt
Lib/freeRTOS/config/: FreeRTOSConfig.h
Lib/freeRTOS/custom/: freeRTOS_RiscV_provider.c  freeRTOS_RiscV_provider.h
Lib/freeRTOS/freertos_kernel/portable/GCC/RISC-V/: portASM.S
Lib/logger/inc/: logger.h
Lib/logger/src/: print_target.c
